# go-proxy

./: .gitignore  Makefile  README.md  go.mod  install-xray.sh  main.go  proxy.proto
core/: go.mod  main.go
core/api/: proxy.pb.go  proxy_grpc.pb.go
core/api/handlers/: node.go  rpc_service.go  subscription.go
core/api/node_service/: node.go  node_service.go  state.go  subscription.go
core/api/proxy_service/: proxy.go  proxy_service.go
core/file/: state.go
core/handlers/: node.go
core/internal/file/: state.go
core/internal/links/: fetch.go  parse.go
core/internal/manager/: manager.go
core/internal/service/: node.go
core/links/: fetch.go  generation.go  parse.go
core/manager/: manager.go  subscription.go
core/models/: config.go  node.go  state.go  subscription.go
core/service/: state.go
core/utils/: generation.go  parse.go
desktop/: CMakeLists.txt  CMakeLists.txt.autosave  main.py  mainwindow.ui
desktop/client/: proxy_pb2.py  proxy_pb2.pyi  proxy_pb2_grpc.py
desktop/controller/: node_controller.py
desktop/design/: addsubscriptiondialog.py  editnodedialog.py  editsubdialog.py  mainwindow.py
desktop/design/form/: addsubscriptiondialog.ui  editnodedialog.ui  editsubdialog.ui  mainwindow.ui
desktop/form/: MainWindow.ui  addsubscriptiondialog.ui  mainwindow.py  mainwindow.ui  mainwindow.ui.autosave
desktop/handlers/: grpc.py  node_handler.py  proxy.py
desktop/handlers/node/: add.py  delete.py  edit.py  get.py  state.py  update.py
desktop/logic/: window.py
desktop/model/: worker.py
desktop/service/: worker.py
desktop/src/: main.cpp
desktop/src/client/: client.cpp  client.h  proxy.grpc.pb.cc  proxy.grpc.pb.h  proxy.pb.h
desktop/ui/: MainWindow.ui  MainWindow_ui.py
desktop/view/: dialog.py  notification.py  window.py
